# newragcity

./: .dockerignore  .env.example  .gitignore  ACTUAL_BENCHMARK_RESULTS.md  ALL_15_BEIR_DATASETS_PLAN.md  ALL_15_DATASETS_EXECUTION_PLAN.md  BENCHMARK_ASSESSMENT.md  BENCHMARK_COMPARISON_TO_SOTA.md  BENCHMARK_CORRECT_APPROACH.md  BENCHMARK_EXECUTION_REPORT.md  BENCHMARK_TRUTH_REPORT.md  CLAUDE.md  COMPREHENSIVE_BENCHMARK_RESULTS.md  CRITICAL_GAPS_AND_MITIGATIONS.md  DEMO_SCRIPT.sh  DEPLOYMENT_BLOCKERS_RESOLVED.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_STATUS.md  DOCKER_GITHUB_SYNC_VERIFICATION.md  Dockerfile  EMERGENCY_RESCUE_PLAN.md  ENHANCEMENT_ROADMAP.md  EXECUTIVE_SUMMARY_ONE_PAGER.md  FRESH_CLONE_DEPLOYMENT_TEST.md  FRESH_CLONE_TEST_RESULTS.md  FULL_323_BENCHMARK_STATUS.md  GEMINI.md  HONEST_PROJECT_STATUS_REPORT.md  HONEST_SOTA_COMPARISON.md  HOW_TO_ADD_ROT_TO_UNIFIED_SYSTEM.md  MISSION_CRITICAL.md  NEWRAGCITY_ARCHITECTURE.md  PHASE_1_BENCHMARK_STATUS.md  QUICK_START.md  README.md  ROT_INTEGRATION_ASSESSMENT.md  ROT_INTEGRATION_TECHNICAL_PLAN.md  SAVE_YOUR_JOB_NOW.md  SETUP_ISSUES.md  TODO_QWEN3_UPGRADE.md  (+10 more)
TheVault/: pyproject.toml
TheVault/scripts/: ingest_bulk.py
TheVault/servers/dkr/: parameter.yaml
TheVault/servers/local_llm/: parameter.yaml
TheVault/servers/prompt/prompt/: synthesis.jinja
TheVault/servers/prompt/src/: prompt.py
ersatz_rag/: LICENSE  (+47 more)
ersatz_rag/cognitron/: .env.example  2025-09-01-this-session-is-being-continued-from-a-previous-co.txt  2025-09-01-this-session-is-being-continued-from-a-previous-co410.txt  BREAKTHROUGH_SUMMARY.md  COGNITRON_100_PERCENT_ACTION_PLAN.md  COGNITRON_TRANSFORMATION_CHECKLIST.md  COMPREHENSIVE_TESTING_AND_VALIDATION_STRATEGY.md  COMPREHENSIVE_TESTING_STRATEGY.md  Dockerfile  MONOREPO_IMPLEMENTATION.md  README.md  THALAMUS_ENHANCEMENT_CHECKLIST.md  approve.py  docker-compose.yml  pyproject.toml  test_approval.py  test_cognitron_100_percent.py  test_cognitron_core.py  test_cognitron_final_100.py  test_cognitron_integration.py  test_end_to_end.py  test_multiple_approvals.py  test_temporal_intelligence.py  transform_to_developer.py
ersatz_rag/cognitron/cognitron/: __init__.py  cli.py  models.py
ersatz_rag/cognitron/cognitron/core/: __init__.py  agent.py  confidence.py  llm.py  memory.py  router.py
ersatz_rag/cognitron/cognitron/indexing/: __init__.py  service.py
ersatz_rag/cognitron/cognitron/temporal/: __init__.py  context_resurrection.py  memory_decay.py  pattern_crystallization.py  pattern_engine.py  project_discovery.py
ersatz_rag/cognitron/cognitron/topics/: __init__.py  service.py
ersatz_rag/cognitron/docs/: COGNITRON_TECHNICAL_WHITEPAPER.md  DEPLOYMENT_GUIDE.md  GAP_ANALYSIS_AND_ROADMAP.md  README_MODERN.md
ersatz_rag/cognitron/scripts/: build_all.py  create_package_configs.py  format_all.py  install.ps1  install.py  install.sh  install_all.py  lint_all.py  medical_grade_validation.py  migrate_to_monorepo.py  pre_commit_medical_validation.py  setup_ci_cd.py  setup_development.py  test_all.py
ersatz_rag/cognitron/test_knowledge/code/: authentication.py  database_schema.py
ersatz_rag/cognitron/test_knowledge/docs/: API_DOCUMENTATION.md  SECURITY_POLICIES.md
ersatz_rag/cognitron/test_knowledge/mixed/: DEPLOYMENT_GUIDE.md
ersatz_rag/cognitron/tools/integration_testing/: cross_app_integration_tester.py
ersatz_rag/cognitron/tools/performance_testing/: medical_grade_performance_tester.py
ersatz_rag/cognitron/tools/security_testing/: medical_grade_security_validator.py
ersatz_rag/cognitron/tools/test_orchestration/: medical_grade_test_orchestrator.py
ersatz_rag/cognitron/tools/test_utilities/: medical_grade_test_framework.py  test_data_generator.py
ersatz_rag/regulus/backend/: 2025-08-30-this-session-is-being-continued-from-a-previous-co.txt  Dockerfile  README.md  README_SIMPLE.md  TRANSPARENCY_INFRASTRUCTURE.md  complete_demo.py  conftest.py  pyproject.toml  regulus_index.chunks  regulus_index.faiss  regulus_index.metadata  wait-for-postgres.sh
ersatz_rag/regulus/backend/app/: agent.py  config.py  hybrid_ingest.py  hybrid_retrieve.py  indexing.py  leann_vector.py  llm.py  main.py  memory.py  models.py  simple_backend.py  three_approach_integration.py  transparent_three_approach_integration.py
ersatz_rag/regulus/backend/benchmarks/: BENCHMARK_STATUS_UPDATE.md  EMBEDDING_COMPARISON_CORRECTED.md  EMBEDDING_MODEL_COMPARISON.md  HANDOFF.md  LESSONS_LEARNED_JSON_BUG.md  PARALLEL_EXECUTION_GUIDE.md  ROOT_CAUSE_ANALYSIS_SOTA.md  VALIDATION_AND_BENCHMARK_PLAN.md  automated_sota_testing.py  beir_all_datasets.py  beir_parallel_runner.py  beir_single_dataset.py  beir_unified_benchmark.py  download_beir_datasets.py  monitor_benchmark.sh  monitor_parallel.sh  run_automated_sota.sh  validate_all_datasets.py  validate_benchmark_system.py  validate_parallel_system.py
ersatz_rag/regulus/backend/scripts/: index_ws_ed.py  (+1 more)
servers/rot_reasoning/: .gitignore  ARCHITECTURE_STATUS.md  BENCHMARK_PLAN.md  Dockerfile  EXECUTE_PLAN.md  FIXES.md  FRESH_CLONE_TEST_RESULTS.md  FRESH_INSTALL_VALIDATION.md  GIT_SETUP.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INSTALL_CHECKLIST.md  MODEL_SETUP.md  PRE_COMMIT_CHECKLIST.md  PROOF_OF_FUNCTIONALITY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_TEST_RESULTS.md  UX_IMPROVEMENTS_v0.2.0.md  UX_ONBOARDING_FLOW.md  commit_to_github.sh  docker-compose.yml  parameter.yaml  pyproject.toml  requirements.txt  setup.py  setup_venv.sh  test_setup_flow.sh  validate_setup.py
servers/rot_reasoning/benchmarks/: README.md  __init__.py  baselines.py  rot_evaluator.py  rot_workaround_benchmark.py  run_benchmarks.py
servers/rot_reasoning/examples/: example_usage.py  rot_branch.yaml  rot_loop.yaml  rot_simple.yaml
servers/rot_reasoning/results/: benchmark_results_20260124_113259.json  benchmark_results_20260124_152808.json
servers/rot_reasoning/src/: __init__.py  cot_compressor.py  cot_compressor_v2.py  loss.py  model_manager.py  ocr_wrapper.py  rot_compressor.py  rot_reasoning.py  text_to_image.py
servers/rot_reasoning/tests/: __init__.py  test_tools.py
(+165 files in other folders)
