[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitron"
version = "0.1.0"
description = "Personal Knowledge Assistant with Medical-Grade Quality Assurance"
authors = [{name = "Cognitron Team", email = "team@cognitron.ai"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "knowledge-management", "personal-assistant", "medical-grade", "confidence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "leann-core>=0.3.2",
    "leann-backend-hnsw>=0.3.2", 
    "typer>=0.12.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "sqlite-utils>=3.34.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "aiofiles>=24.0.0",
    "asyncio-mqtt>=0.16.0",
    "hdbscan>=0.8.33",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "PyMuPDF>=1.23.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.7.0",
    "watchdog>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0", 
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cognitron = "cognitron.cli:main"

[project.urls]
Homepage = "https://github.com/cognitron-ai/cognitron"
Documentation = "https://docs.cognitron.ai"
Repository = "https://github.com/cognitron-ai/cognitron"
Issues = "https://github.com/cognitron-ai/cognitron/issues"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "EM", "UP"]
ignore = ["E501", "B008", "B904"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011", "B018"]
"cognitron/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cognitron"]
omit = ["tests/*", "cognitron/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]