[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rot-reasoning-server"
version = "0.2.0"
description = "RoT (Render-of-Thought) Reasoning MCP Server for UltraRAG"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "deepspeed>=0.10.0",
    "accelerate>=0.20.0",
    "peft>=0.5.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

# Full RoT with vision models
full = [
    "timm>=0.9.0",
    "opencv-python>=4.8.0",
    "qwen-vl-utils>=0.0.1",
]

# Training dependencies
train = [
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "datasets>=2.14.0",
]

all = [
    "rot-reasoning-server[dev]",
    "rot-reasoning-server[full]",
    "rot-reasoning-server[train]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
